--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,27 @@
 <resources>
     <string name="app_name">GridAprodhite</string>
-    <string name="makeup_1_title">makeup</string>
-    <string name="makeup_1_brand">maybelline</string>
-    <string name="makeup_2_title">lip product</string>
-    <string name="makeup_2_brand">lip product</string>
-    <string name="makeup_3_title">bedak</string>
-    <string name="makeup_3_brand">maybelline</string>
-    <string name="makeup_4_title">foundation</string>
-    <string name="makeup_4_brand">maybelline</string>
-    <string name="makeup_5_title">lip cream</string>
-    <string name="makeup_5_brand">maybelline</string>
-    <string name="makeup_6_title">lip</string>
-    <string name="makeup_6_brand">maybelline</string>
-    <string name="makeup_7_title">bedak</string>
-    <string name="makeup_7_brand">maybelline</string>
-    <string name="makeup_8_title">conceal</string>
-    <string name="makeup_8_brand">maybelline</string>
-    <string name="makeup_9_title">foundi</string>
-    <string name="makeup_9_brand">maybelline</string>
-    <string name="makeup_10_title">maskara</string>
-    <string name="makeup_10_brand">maybelline</string>
-    <string name="makeup_11_title">lipps</string>
-    <string name="makeup_11_brand">maybelline</string>
-    <string name="makeup_12_title">foundation</string>
-    <string name="makeup_12_brand">maybelline</string>
+    <string name="makeup_1_title">Maybelline Superstay Vinyl Ink 4.2 ml</string>
+    <string name="makeup_1_brand">Rp111.300</string>
+    <string name="makeup_2_title">Maybelline Superstay Foundation 8 ml</string>
+    <string name="makeup_2_brand">Rp211.300</string>
+    <string name="makeup_3_title">Maybelline Superstay Foundation 5 ml</string>
+    <string name="makeup_3_brand">Rp221.000</string>
+    <string name="makeup_4_title">Maybelline Superstay Lip Cream 3 ml</string>
+    <string name="makeup_4_brand">Rp100.000</string>
+    <string name="makeup_5_title">Maybelline Superstay Powderstay 6 ml</string>
+    <string name="makeup_5_brand">Rp210.300</string>
+    <string name="makeup_6_title">Maybelline Superstay Highlighter 5 ml</string>
+    <string name="makeup_6_brand">Rp181.300</string>
+    <string name="makeup_7_title">Maybelline Superstay Lippiestay 4 ml</string>
+    <string name="makeup_7_brand">Rp411.300</string>
+    <string name="makeup_8_title">Maybelline Superstay Concealer 8 ml</string>
+    <string name="makeup_8_brand">Rp161.300</string>
+    <string name="makeup_9_title">Maybelline Superstay lipcollor 9 ml</string>
+    <string name="makeup_9_brand">Rp300.300</string>
+    <string name="makeup_10_title">Maybelline Superstay Foundation 4 ml</string>
+    <string name="makeup_10_brand">Rp150.300</string>
+    <string name="makeup_11_title">Maybelline Superstay Lipcream 6 ml</string>
+    <string name="makeup_11_brand">Rp81.300</string>
+    <string name="makeup_12_title">Maybelline Superstay Foundation 5 ml</string>
+    <string name="makeup_12_brand">Rp71.300</string>
 </resources>
